--- a/LibLoop.cbp
+++ b/LibLoop.cbp
@@ -42,10 +42,17 @@
 			<Add library="ev" />
 		</Linker>
 		<Unit filename="include/MainLoop.hpp" />
+		<Unit filename="include/Properties.hpp" />
 		<Unit filename="include/Scheduler.hpp" />
 		<Unit filename="include/Signal.hpp" />
 		<Unit filename="include/Timer.hpp" />
 		<Unit filename="include/loop.hpp" />
+		<Unit filename="include/properties/ComparableProperty.hpp" />
+		<Unit filename="include/properties/LogicalProperty.hpp" />
+		<Unit filename="include/properties/NumericProperty.hpp" />
+		<Unit filename="include/properties/Property.hpp" />
+		<Unit filename="include/properties/SortableProperty.hpp" />
+		<Unit filename="include/properties/StreamableProperty.hpp" />
 		<Unit filename="src/MainLoop.cpp" />
 		<Unit filename="src/Scheduler.cpp" />
 		<Unit filename="src/Timer.cpp" />
